# Computational_Intelligence

./: Final_Report.md  LICENSE  README.md  SetCovering_Astar.ipynb  pyproject.toml  pyvenv.cfg
Halloween_challenge/: Halloween.ipynb
Lab1/: SetCovering_Astar.ipynb
Lab10/: lab10-gx.ipynb  lab10.ipynb
Lab2/: lab2-nim.ipynb
Lessons_code/: SetCovering2_HillClimbing.ipynb
Quixo_Exam/: game.py  main.py
Scripts/: activate  activate.bat
assignment1/: pyproject.toml
