[tool.poetry]
name = "computational-intelligence"
version = "0.1.0"
description = ""
authors = ["NUNZIO MESSINEO s315067 <s315067@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
